--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="OnlyWave Store - Sua moda, nossa onda. Encontre as melhores roupas, tênis e acessórios com frete grátis para todo o Brasil." />
+    <meta name="keywords" content="moda, tênis, roupas, acessórios, loja online, OnlyWave" />
+    <meta name="author" content="OnlyWave Store" />
+    <meta name="theme-color" content="#4EBABA" />
+    <title>OnlyWave Store - Sua moda, nossa onda</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
